--- a/cello/build.xml
+++ b/cello/build.xml
@@ -12,7 +12,7 @@
         <mkdir dir="build/jar"/>
         <jar destfile="build/jar/HelloWorld.jar" basedir="build/classes">
             <manifest>
-                <attribute name="Main-Class" value="oata.HelloWorld"/>
+                <attribute name="Main-Class" value="com.cello.hello.HelloCello"/>
             </manifest>
         </jar>
     </target>
